Update user manuals

--- a/installer/resources/tools/RTGOperationsManual/administration.html
+++ b/installer/resources/tools/RTGOperationsManual/administration.html
@@ -7,7 +7,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>Administration &amp; Capacity Planning &#8212; RTG Tools Operations Manual v3.7</title>
+    <title>Administration &amp; Capacity Planning &#8212; RTG Tools Operations Manual v3.8</title>
     
     <link rel="stylesheet" href="_static/bizstyle.css" type="text/css" />
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
@@ -15,19 +15,21 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
-        VERSION:     '3.7',
+        VERSION:     '3.8',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
-        HAS_SOURCE:  true
+        HAS_SOURCE:  true,
+        SOURCELINK_SUFFIX: '.txt'
       };
     </script>
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="_static/bizstyle.js"></script>
-    <link rel="top" title="RTG Tools Operations Manual v3.7" href="index.html" />
+    <link rel="index" title="Index" href="genindex.html" />
+    <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Appendix" href="appendix.html" />
-    <link rel="prev" title="RTG product usage - baseline progressions" href="product_usage_wrapper.html" />
+    <link rel="prev" title="RTG product usage - baseline progressions" href="product_usage.html" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--[if lt IE 9]>
     <script type="text/javascript" src="_static/css3-mediaqueries.js"></script>
@@ -44,9 +46,9 @@
           <a href="appendix.html" title="Appendix"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="product_usage_wrapper.html" title="RTG product usage - baseline progressions"
+          <a href="product_usage.html" title="RTG product usage - baseline progressions"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">RTG Tools Operations Manual v3.7</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">RTG Tools Operations Manual v3.8</a> &#187;</li> 
       </ul>
     </div>
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
@@ -72,7 +74,7 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="product_usage_wrapper.html"
+  <p class="topless"><a href="product_usage.html"
                         title="previous chapter">RTG product usage - baseline progressions</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="appendix.html"
@@ -80,7 +82,7 @@
   <div role="note" aria-label="source link">
     <h3>This Page</h3>
     <ul class="this-page-menu">
-      <li><a href="_sources/administration.txt"
+      <li><a href="_sources/administration.rst.txt"
             rel="nofollow">Show Source</a></li>
     </ul>
    </div>
@@ -192,7 +194,7 @@ processing and otherwise working with smaller genomes, RTG works just
 fine on a newer laptop system with an Intel processor. For example,
 product testing in support of this documentation was executed on a
 MacBook PC (Intel Core 2 Duo processor, 2.1 GHz clock speed, 1
-processor, 2 cores, 3MB L2 Cache, 4 GB RAM, 290 GB 5400 RPM Serial-ATA
+processor, 2 cores, 3 MB L2 Cache, 4 GB RAM, 290 GB 5400 RPM Serial-ATA
 disk)</p>
 <p><strong>Clustered system</strong> — The comparison of genomic variation on a large
 scale demands extensive processing capability. Assuming standard CPU
@@ -349,14 +351,14 @@ characters).</li>
           <a href="appendix.html" title="Appendix"
              >next</a> |</li>
         <li class="right" >
-          <a href="product_usage_wrapper.html" title="RTG product usage - baseline progressions"
+          <a href="product_usage.html" title="RTG product usage - baseline progressions"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">RTG Tools Operations Manual v3.7</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">RTG Tools Operations Manual v3.8</a> &#187;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2016, Real Time Genomics.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.6.
+        &#169; Copyright 2017, Real Time Genomics.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.5.3.
     </div>
   </body>
 </html>
